[tool.poetry]
name = "things-url-import"
version = "1.0.0"
description = ""
authors = ["Mirko Lenz <mirko@lenz.am>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
"ruamel.yaml" = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
